--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <a href="#"></a>
+            <ul>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+            </ul>
+        </nav>
+    </header>
     <main></main>
     <footer></footer>
 </body>
